# mujoco_spirob

./: .gitignore  MUJOCO_LOG.TXT  README.md  generate_2d_spirob.py  math_for_2d.py  math_for_2d_unique_angles.py  pyproject.toml  spiral_chain.xml  spiral_xy.csv  test.py
apps/: controll_spirob_test.py  generate_2d_spirob.py  spirob_mujoco_plot.py  spirob_testbench.py
docs/: conf.py  index.rst
docs/spirob_docs/: api.rst  spirob_generator.rst
src/math_spirob/: __init__.py  math_spirob.py  spirob_generator.py
tests/: test_math_spirob.py
